Melhoramento do Codigo